cypress/webapp-master/k8s/maintenanceservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintenance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maintenance
  template:
    metadata:
      labels:
        app: maintenance
    spec:
      containers:
        - name: maintenance
          image: nginx
          imagePullPolicy: 'IfNotPresent'
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            timeoutSeconds: 3
            failureThreshold: 10
            initialDelaySeconds: 2
          volumeMounts:
            - name: maintenance-config
              mountPath: /usr/share/nginx/html/404.html
              subPath: 404.html
            - name: maintenance-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf

      volumes:
        - name: maintenance-config
          configMap:
            name: maintenance-config


---
apiVersion: v1
kind: Service
metadata:
  name: maintenance
  labels:
    app: maintenance
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: maintenance
